plugins {
	id 'fabric-loom' version '1.6-SNAPSHOT'
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

		repositories {
			// Add repositories to retrieve artifacts from in here.
			// You should only use this when depending on other mods because
			// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
			// See https://docs.gradle.org/current/userguide/declaring_repositories.html
			// for more information about repositories.
			maven { url "https://maven.shedaniel.me/" }
			maven { url "https://maven.terraformersmc.com/releases/" }
		}

		fabricApi {
			configureDataGeneration()
		}

		dependencies {
			// To change the versions see the gradle.properties file
			minecraft "com.mojang:minecraft:${project.minecraft_version}"
			mappings loom.officialMojangMappings()
			modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
			implementation 'com.google.code.gson:gson:2.10.1'

			// Fabric API. This is technically optional, but you probably want it anyway.
			modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
			modImplementation "com.terraformersmc:modmenu:10.0.0"
			modApi "me.shedaniel.cloth:cloth-config-fabric:14.0.126"

		}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	options.compilerArgs += ['-Xlint:deprecation']
	it.options.release = 21
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.base.archivesName.get()}"}
	}
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}